# theOutreachProject

./: .dockerignore  .gitignore  Dockerfile  README.md  api_server.py  api_server_v2.py  docker-compose.yml  outreach.db  pyproject.toml  render.yaml  serve.py
.agent/workflows/: mvp-implementation.md
docs/: gmail-setup.md
frontend/: app-old.js  app-v2.js  app.js  forgot-password.html  index-old.html  index-v2.html  index.html  login.html  privacy.html  register.html  reset-password.html  styles.css  terms.html  verify-email.html
outreach_proj/: .env.example  __init__.py  api_helpers.py  auth.py  cli.py  config.json  config.py  contacts.csv  database.py  generate_email.py  models.py  outreach.py  prompt_components.py  requirements.txt  send_email.py  testcontacts.csv
outreach_proj.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
outreach_proj/services/: __init__.py  apollo_service.py  contact_enrichment_service.py  contact_service.py  email_service.py  hunter_service.py  template_service.py
tests/: test_outreach.py
